# reyer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
apps/: CMakeLists.txt
apps/reyer_app/: README.md  main.py  pyproject.toml
apps/reyer_app/src/: __init__.py  client.py  graphics_settings_dialog.py  launcher_dialog.py  messages.py  new_task_dialog.py  plugin_scaffold.py  protocol_builder.py  protocol_storage.py  schema_ui.py
apps/reyer_app/src/pages/: __init__.py  basic_info_page.py  graphics_settings_page.py  pipeline_config_page.py  task_config_page.py  task_selection_page.py
apps/reyer_rt/: CMakeLists.txt
apps/reyer_rt/cmake/: Dependencies.cmake
apps/reyer_rt/include/reyer_rt/: app.hpp
apps/reyer_rt/include/reyer_rt/experiment/: protocol.hpp
apps/reyer_rt/include/reyer_rt/managers/: broadcast_manager.hpp  graphics_manager.hpp  message_manager.hpp  pipeline_manager.hpp  plugin_manager.hpp  protocol_manager.hpp
apps/reyer_rt/include/reyer_rt/net/: message_types.hpp  publish_socket.hpp  reply_socket.hpp  request_socket.hpp  subscribe_socket.hpp
apps/reyer_rt/include/reyer_rt/net/detail/: socket_base.hpp
apps/reyer_rt/include/reyer_rt/pipeline/: pipeline.hpp
apps/reyer_rt/include/reyer_rt/stages/: eye_data_writer.hpp
apps/reyer_rt/include/reyer_rt/threading/: thread.hpp
apps/reyer_rt/include/reyer_rt/utils/: utils.hpp
apps/reyer_rt/plugins/: CMakeLists.txt
apps/reyer_rt/plugins/ddpi_ipc_source/: CMakeLists.txt  ddpi_ipc_source.cpp
apps/reyer_rt/plugins/dummy_calibration/: CMakeLists.txt  dummy_calibration.cpp
apps/reyer_rt/plugins/dummy_filter/: CMakeLists.txt  dummy_filter.cpp
apps/reyer_rt/plugins/dummy_sink/: CMakeLists.txt  dummy_sink.cpp
apps/reyer_rt/plugins/dummy_source/: CMakeLists.txt  dummy_source.cpp
apps/reyer_rt/plugins/dummy_stage/: CMakeLists.txt  dummy_stage.cpp
apps/reyer_rt/plugins/foaw_velocity_filter/: CMakeLists.txt  foaw.hpp  foaw_velocity_filter.cpp
apps/reyer_rt/plugins/saccade_contingent/: CMakeLists.txt  cuda_gl_interop.h  saccade_contingent.cpp
apps/reyer_rt/plugins/saccade_contingent/butterworth_filter/: CMakeLists.txt  butterworth_filter.cu  butterworth_filter.h
apps/reyer_rt/plugins/sample_plugin/: CMakeLists.txt  configuration.hpp  sample_plugin.cpp
apps/reyer_rt/plugins/simple_calibration/: CMakeLists.txt  simple_calibration.cpp
apps/reyer_rt/plugins/simple_filter/: CMakeLists.txt  simple_filter.cpp
apps/reyer_rt/plugins/tps_calibration/: CMakeLists.txt  tps_calibration.cpp
apps/reyer_rt/plugins/tps_calibration/include/: tps.hpp  tps_calibration.hpp
apps/reyer_rt/src/: app.cpp  main.cpp
apps/reyer_rt/src/managers/: broadcast_manager.cpp  graphics_manager.cpp  message_manager.cpp  plugin_manager.cpp  protocol_manager.cpp
apps/reyer_rt/src/reyer_rt/: app.cpp
apps/reyer_rt/src/reyer_rt/managers/: broadcast_manager.cpp  graphics_manager.cpp  message_manager.cpp
apps/reyer_rt/src/reyer_rt/net/: publish_socket.cpp  reply_socket.cpp  request_socket.cpp  subscribe_socket.cpp
apps/reyer_rt/src/reyer_rt/net/detail/: socket_base.cpp
apps/reyer_rt/tests/: CMakeLists.txt  test_json_auto_deduction.cpp  test_msgpack_auto_deduction.cpp  test_variant_json.cpp  test_variant_msgpack.cpp
cmake/: ReyerDependencies.cmake  ReyerInstall.cmake  ReyerOptions.cmake  ReyerPlugin.cmake  reyerConfig.cmake.in
include/reyer/core/: core.hpp  h5.hpp  queue.hpp  thread.hpp  utils.hpp  vec2.hpp
include/reyer/graphics/: graphics.hpp
include/reyer/plugin/: defs.hpp  interfaces.hpp  iplugin.hpp  loader.hpp  pipeline.hpp  plugin.hpp  source.hpp
plugins/sample_plugin/: CMakeLists.txt  configuration.hpp  sample_plugin.cpp
